--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "sweetalert-react": "^0.4.11",
     "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
